crectified url links

--- a/style.css
+++ b/style.css
@@ -1,14 +1,13 @@
 
 body {
-  background-image: url('imagees/body.png');
+  background-image:url('./imagees/body.png');
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
   height: 100vh;
 }
-
 .main {
-  background-image: url('mobile.png');
+  background-image: url('./imagees/mobile.png');
   background-position: center;
   background-size: cover;
   height: 100vh;
