--- a/style.css
+++ b/style.css
@@ -13,13 +13,13 @@ header {
   justify-content: space-between;
 }
 
-a>.sp1 {
-width: 76px;
-height: 20px;
-font-weight: 700;
-font-size:30px;
-line-height: 20px;
-color: #6070FF;
+a > .sp1 {
+  width: 76px;
+  height: 20px;
+  font-weight: 700;
+  font-size: 30px;
+  line-height: 20px;
+  color: #6070ff;
 }
 
 .sp2 img {
@@ -47,16 +47,17 @@ color: #6070FF;
 }
 
 .text2 {
-margin-top:-2rem; 
-width: 327px;
-height: 146px;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-color: #344563;
+  margin-top: -2rem;
+  width: 327px;
+  height: 146px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  color: #344563;
 }
-.a{
+
+.a {
   display: flex;
   align-self: initial;
   font-weight: 500;
@@ -79,10 +80,11 @@ li {
   list-style-type: none;
 }
 
-.social-media > a >li> img {
+.social-media > a > li > img {
   height: 30px;
   margin-right: 20px;
 }
-a{
-  text-decoration:none;
+
+a {
+  text-decoration: none;
 }
