--- a/style.css
+++ b/style.css
@@ -4,11 +4,11 @@ body {
   background-size: contain;
   background-position: center;
   background-repeat: no-repeat;
-  height: 100vh;
 }
 
 header {
-  margin-top: 2rem;
+  padding-top:2rem;
+  margin-bottom:5rem;
   display: flex;
   justify-content: space-between;
 }
@@ -61,7 +61,7 @@ a > .sp1 {
   display: flex;
   align-self: initial;
   font-weight: 500;
-  font-size: 25px;
+  font-size: 16px;
   text-decoration: none;
   line-height: 24px;
   color: #7f8cff;
@@ -81,7 +81,8 @@ li {
 }
 
 .social-media > a > li > img {
-  height: 30px;
+  height:20px;
+  font-size:2px;
   margin-right: 20px;
 }
 
